--- a/my-stock-app/package.json
+++ b/my-stock-app/package.json
@@ -1,9 +1,10 @@
 {
   "name": "my-stock-app",
   "version": "0.1.0",
-  "author":"tanisha-bhatti",
+  "author": "tanisha-bhatti",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
